- Added setting of blocks
- The Printliminator for XOOPS
-- Add help popup
-- Add QR Code
- The Printliminator for XOOPS
-- Ver. 0.1 Beta 1