@@ -120,3 +120,6 @@ p {
     width: 100%;
     height: 100%;
 }
+#block_qrcode {
+    display:none;
+}
