@@ -13,6 +13,8 @@
 	<{$smarty.const._AM_PRINTLIMINATOR_HELP3}>
 	</div>
 	<div class="width45 floatright pad5">
+  <{$smarty.const._AM_PRINTLIMINATOR_HELP9}>
+  <{$smarty.const._AM_PRINTLIMINATOR_HELP8}>
 	<{$smarty.const._AM_PRINTLIMINATOR_HELP4}>
 	<{$smarty.const._AM_PRINTLIMINATOR_HELP5}>
 	<{$smarty.const._AM_PRINTLIMINATOR_HELP6}>
