@@ -1,0 +1,7 @@
+<div class="widget_help" style="display:inline-block;position:relative;left:<{$block.qrcode_div_left}>;top:<{$block.qrcode_div_top}>;z-index:10000;">
+   <img alt="<{$block.qrcode_div_title}>" style="border:1px solid;" src="<{$xoops_url}>/modules/printliminator/include/php/qr_img.php?d=<{$xoops_sitename}> - <{$xoops_pagetitle}> <{$xoops_url}><{$xoops_requesturi}>&amp;e=<{$block.qrcode_div_error}>&amp;s=<{$block.qrcode_div_size}>" />
+            <span class="tooltip_help bookmarklet"> 
+                <div class="footer_print"><{$xoops_sitename}> - <{$xoops_pagetitle}> <{$xoops_url}><{$xoops_requesturi}>
+                </div>
+            </span>  
+</div>
