@@ -1,0 +1,3 @@
+<div style="z-index:10000;">
+   <img alt="<{$xoops_sitename}>" style="border:1px solid;" src="<{$xoops_url}>/modules/printliminator/include/php/qr_img.php?d=<{$xoops_sitename}> - <{$xoops_pagetitle}> <{$xoops_url}><{$xoops_requesturi}>&amp;e=M&amp;s=2" />
+</div>
